@@ -682,6 +682,7 @@
 \alias{.font<-,gWidgetRGtk,guiWidgetsToolkitRGtk2-method}
 \alias{.font<-,RGtkObject,guiWidgetsToolkitRGtk2-method}
 \alias{.font<-,gButtonRGtk,guiWidgetsToolkitRGtk2-method} 
+\alias{.font<-,gStatusbarRGtk,guiWidgetsToolkitRGtk2-method} 
 \alias{.font<-,gTextRGtk,guiWidgetsToolkitRGtk2-method} 
 %%
 %% --  tag --
